--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,1 @@
-repositories {
-    jcenter()
-    maven { url "https://jitpack.io" }
-}
-dependencies {
-    implementation 'com.github.jitpack:gradle-simple:1.0'
-}
+apply from: "maven"
