--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
+import java.text.SimpleDateFormat
+
 plugins {
     id 'java'
     id 'maven'
     id 'idea'
 }
 
+SimpleDateFormat dateFormat = new SimpleDateFormat('yy/MM/dd HH:mm:ss')
+String stringDate = dateFormat.format(new Date(System.currentTimeMillis()))
 sourceCompatibility = 1.8 // java 8
 targetCompatibility = 1.8
 group = 'com.github.Iltotore'
@@ -32,11 +36,13 @@ dependencies {
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
+    println("[${stringDate}]: Built sources")
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
+    println("[${stringDate}]: Built javadocs")
 }
 
 artifacts {
