Rename package name in order to respect conventions and to be consistent with the gradle group

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ SimpleDateFormat dateFormat = new SimpleDateFormat('yy/MM/dd HH:mm:ss')
 String stringDate = dateFormat.format(new Date(System.currentTimeMillis()))
 sourceCompatibility = 1.8 // java 8
 targetCompatibility = 1.8
-group = 'com.github.Iltotore'
+group = 'com.github.iltotore'
 
 sourceSets {
     main {
